--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -273,11 +273,17 @@ body > footer > .contact {
     list-style: none;
     float:left;
     width: 14.2857143%;
-    border: 1px solid #ccc;
 }
 
 .slideshow .controls img {
     width:100%;
+    border: 1px solid #ccc;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: .714285714em;
     opacity:0.3;
     filter:alpha(opacity=30); /* For IE8 and earlier */
 }
