--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -430,29 +430,28 @@ body > footer > .contact {
         line-height:1.3em;
     }
 
-    .details .description .meta {
+    .details .meta {
         float:right;
         width:40%;
     }
 
-    .details .description .text {
+    .details .description {
         float:left;
-        width:56%;
-        margin: 10px 2%;
+        width:60%;
     }
 
     .details .description .text p {
         margin-bottom:10px;
     }
 
-    .details .description .meta .categories {
+    .details .meta .categories {
         overflow: hidden;
         width:90%;
         margin: 10px 5%;
         clear:both;
     }
 
-    .details .description .meta .categories li {
+    .details .meta .categories li {
         overflow: hidden;
         float:left;
         width:17.5%;
@@ -462,7 +461,7 @@ body > footer > .contact {
         text-align: center;
     }
 
- .details .description .meta .categories li a {
+ .details .meta .categories li a {
         color:#fff;
         float:left;
         width:100%;
