--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -36,7 +36,7 @@
                     <ul class="categories">
                         {% if project.project_types.all %}
                             {% for category in project.project_types.all %}
-                                <li class="project-type flex-box center">
+                                <li class="project-type flex box center">
                                     <a href="#" title="{{ category.name }}" class="flex-box center">
                                         {{ category.alternate_title }}
                                     </a>
