editing detail page

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -28,7 +28,7 @@
     {% endif %}
         <section class="details">
             <header class="box"><h1>{{ project.name }}</h1></header>
-            <div class="description">
+            <div class="description box">
                 {{ project.description_html|safe }}
             </div>
             <div class="meta">
