editing detail page

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -389,6 +389,10 @@ body > footer > .contact {
     margin:.714285714em 0;
 }
 
+.details p {
+    text-align: justify;
+}
+
 .details p:first-child {
     margin-top:0;
 }
