--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -231,7 +231,7 @@ body > footer > .contact {
 
 /* slideshow */
 .slideshow {
-    background:url('images/line-bg-right.png') no-repeat right top;
+    background:url('images/corner-bg-top-right.png') no-repeat right top, background:url('images/side-bg.png') no-repeat right 50%;
     float:left;
     width:58.33333%;
     position: relative;
@@ -369,7 +369,7 @@ body > footer > .contact {
     float:left;
     width:41.66667%;
     margin:0;
-    background:url('images/line-bg-right.png') no-repeat right top;
+    background:url('images/corner-bg-top-right.png') no-repeat right top;
 }
 
 .details h1 {
