--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -246,6 +246,12 @@ body > footer > .contact {
 .slideshow .carousel .slides img {
     width:100%;
     display:block;
+     border: 1px solid #ccc;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 .slideshow .carousel .slides li {
