--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -231,7 +231,7 @@ body > footer > .contact {
 
 /* slideshow */
 .slideshow {
-    background:url('images/corner-bg-top-right.png') no-repeat right top, url('images/vertical-bg.png') no-repeat right 90%;
+    background:url('images/corner-bg-top-right.png') no-repeat right top, url('images/vertical-bg.png') no-repeat 10px 90%;
     float:left;
     width:58.33333%;
     position: relative;
@@ -244,12 +244,7 @@ body > footer > .contact {
 }
 
 .slideshow .carousel .slides {
-     border: 1px solid #ccc;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -o-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    box-sizing: border-box;
+    border: 1px solid #ccc;
 }
 
 .slideshow .carousel .slides img {
