--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -231,7 +231,7 @@ body > footer > .contact {
 
 /* slideshow */
 .slideshow {
-    background:url('images/corner-bg-top-right.png') no-repeat right top, url('images/vertical-bg.png') no-repeat 10px 90%;
+    background:url('images/corner-bg-top-right.png') no-repeat right top
     float:left;
     width:58.33333%;
     position: relative;
@@ -241,6 +241,7 @@ body > footer > .contact {
 .slideshow .carousel {
     position: relative;
     margin: 10px;
+    url('images/vertical-bg.png') no-repeat right 90%;
 }
 
 .slideshow .carousel .slides {
