--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -292,6 +292,7 @@ body > footer > .contact {
     box-sizing: border-box;
     opacity:0.3;
     filter:alpha(opacity=30); /* For IE8 and earlier */
+    -webkit-transition: all 0.5s ease-in;
 }
 
 .slideshow .controls a.active img,
