--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -274,6 +274,7 @@ body > footer > .contact {
     margin:0 0 0 0;
     padding:0 0 0 0;
     overflow: auto;
+    background:url('images/vertical-bg.png') no-repeat right 10px;
 }
 
 .slideshow .controls li {
