--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -231,7 +231,7 @@ body > footer > .contact {
 
 /* slideshow */
 .slideshow {
-    background:url('images/corner-bg-top-right.png') no-repeat right top, url('images/vertical-bg.png') no-repeat 10px 80%;
+    background:url('images/corner-bg-top-right.png') no-repeat right top, url('images/vertical-bg.png') no-repeat 10px 90%;
     float:left;
     width:58.33333%;
     position: relative;
@@ -274,7 +274,7 @@ body > footer > .contact {
     margin:0 0 0 0;
     padding:0 0 0 0;
     overflow: auto;
-    background:url('images/vertical-bg.png') no-repeat right 10px;
+    background:url('images/top-bg.png') no-repeat right 10px;
 }
 
 .slideshow .controls li {
