--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -231,7 +231,9 @@ body > footer > .contact {
 
 /* slideshow */
 .slideshow {
-    background:url('images/corner-bg-top-right.png') no-repeat right top, url('images/vertical-bg.png') no-repeat 10px 90%;
+    background:url('images/corner-bg-top-right.png') no-repeat right top,
+               url('images/vertical-bg.png') no-repeat 10px 90%,
+               url('images/bottom-bg.png') no-repeat left bottom;
     float:left;
     width:58.33333%;
     position: relative;
