--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -232,7 +232,8 @@ body > footer > .contact {
 /* slideshow */
 .slideshow {
     background:url('images/corner-bg-top-right.png') no-repeat right top,
-               url('images/vertical-bg.png') no-repeat 10px 90%;
+               url('images/vertical-bg.png') no-repeat 10px 90%,
+                url('images/bottom-bg.png') no-repeat left 10px;
     float:left;
     width:58.33333%;
     position: relative;
