--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -235,7 +235,7 @@ body > footer > .contact {
                url('images/vertical-bg.png') no-repeat 10px 90%,
                url('images/vertical-bg.png') no-repeat 10px top,
                url('images/bottom-bg.png') no-repeat left 10px,
-               url('images/right-bg.png') no-repeat 90% right;
+               url('images/right-bg.png') no-repeat right 90%;
     float:left;
     width:58.33333%;
     position: relative;
