--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -234,8 +234,7 @@ body > footer > .contact {
     background:url('images/corner-bg-top-right.png') no-repeat right top,
                url('images/vertical-bg.png') no-repeat 10px 90%,
                url('images/vertical-bg.png') no-repeat 10px top,
-               url('images/bottom-bg.png') no-repeat left 10px,
-               url('images/right-bg.png') no-repeat right 90%;
+               url('images/bottom-bg.png') no-repeat left 10px;
     float:left;
     width:58.33333%;
     position: relative;
