--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -381,7 +381,8 @@ body > footer > .contact {
     float:left;
     width:41.66667%;
     margin:0;
-    background:url('images/corner-bg-top-right.png') no-repeat right top;
+    background:url('images/corner-bg-top-right.png') no-repeat right top,
+               url('images/corner-bg-bottom-right.png') no-repeat right bottom;
 }
 
 .details h1 {
