--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -227,6 +227,7 @@ body > footer > .contact {
 #detail article.project {
     position:relative;
     overflow: auto;
+    background: url('images/corner-bg-bottom-right.png') no-repeat right bottom;
 }
 
 /* slideshow */
@@ -381,8 +382,8 @@ body > footer > .contact {
     float:left;
     width:41.66667%;
     margin:0;
-    background:url('images/corner-bg-top-right.png') no-repeat right top,
-               url('images/corner-bg-bottom-right.png') no-repeat right bottom;
+    background:url('images/corner-bg-top-right.png') no-repeat right top;
+
 }
 
 .details h1 {
