editing detail page

--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -70,7 +70,7 @@
     </div>
     
     {% block footer %}
-    <footer>
+    <footer class="box">
         <span class="copyright">&copy; {% now "Y" %} Future Green Studio</span>
         <span class="contact">92 3rd Street Brooklyn, NY  |  718.855.8995  |  <a href=="mailto:info@futuregreenstudio.com">info@futuregreenstudio.com</a></span>
     </footer>
