--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -64,6 +64,7 @@ body {
         max-width:1460px;
         padding:0;
         position:relative;
+        background: #fff;
         font: normal 87.5% "Segoe UI", "Lucida Sans", Arial, Helvetica, sans-serif;
         -webkit-transition: all 0.5s ease-in;
     }
