editing detail page

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -84,6 +84,7 @@ div,p,ul,ol,section,article {
 body > header {
     height:80px;
     width:100%;
+    background: #fff;
 }
 
 body > header > h1 {
