--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -85,6 +85,12 @@ body > header {
     height:80px;
     width:100%;
     background: #fff;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: .714285714em;
 }
 
 body > header > h1 {
@@ -111,6 +117,12 @@ body > header > nav li {
 body > .content {
     overflow: auto;
     background: #fff;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: .714285714em;
 }
 
 body > footer {
