--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -314,7 +314,7 @@ body > footer > .contact {
 
 .slideshow .controls a.active img,
 .slideshow .controls a:hover img {
-    border: 1px solid #7eac32;
+    border: 1px solid #999;
     opacity:1.0;
     filter:alpha(opacity=100); /* For IE8 and earlier */
 }
