editing detail page

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -37,7 +37,7 @@
                     <ul class="categories">
                         {% if project.project_types.all %}
                             {% for category in project.project_types.all %}
-                                <li class="project-type class="square box center"">
+                                <li class="project-type class="square center"">
                                     <a href="#" title="{{ category.name }}">
                                         {{ category.alternate_title }}
                                     </a>
