--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -46,7 +46,7 @@
                         {% endif %}
                         {% if project.landscape_types.all %}
                             {% for category in project.landscape_types.all %}
-                                <li class="landscape-type">
+                                <li class="landscape-type square center">
                                     <a href="#" title="{{ category.name }}" class="square box center">
                                         {{ category.alternate_title }}
                                     </a>
