--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -483,10 +483,17 @@ body > footer > .contact {
     overflow: hidden;
     float:left;
     width:20%;
+    border-right: 2px solid #fff;
+    border-bottom: 2px solid #fff;
     margin:0;
     color:#fff;
     font-weight: bold;
     text-align: center;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
  .details .meta .categories li a {
