--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -483,8 +483,7 @@ body > footer > .contact {
     overflow: hidden;
     float:left;
     width:20%;
-    border-right: 2px solid #fff;
-    border-bottom: 2px solid #fff;
+    padding:2px;
     margin:0;
     color:#fff;
     font-weight: bold;
