--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -37,8 +37,8 @@
                     <ul class="categories">
                         {% if project.project_types.all %}
                             {% for category in project.project_types.all %}
-                                <li class="project-type square center">
-                                    <a href="#" title="{{ category.name }}">
+                                <li class="square">
+                                    <a href="#" title="{{ category.name }}" class="project-type square center">
                                         {{ category.alternate_title }}
                                     </a>
                                 </li>
