--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -483,7 +483,7 @@ body > footer > .contact {
     overflow: hidden;
     float:left;
     width:20%;
-    padding:2px;
+    padding:2px 2px 0 0;
     margin:0;
     color:#fff;
     font-weight: bold;
