--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -427,10 +427,8 @@ body > footer > .contact {
 
 .details .size, .details .date, .details .designer {
     float:left;
-    width:40%;
-    height:80px;
+    width:50%;
     background: #ccc;
-    margin: 10px 5%;
     color:#fff;
     text-transform: uppercase;
     font-weight: bold;
@@ -444,17 +442,22 @@ body > footer > .contact {
     text-align: center;
 }
 
-.details .date .year,
-.details .size .number {
-    font-size: 2.5em;
+.details .size span,
+.details .date span {
+    display:block;
 }
 
-.details .date .month,
+.details .date .year,
+.details .size .number {
+    font-size: 2.6em;
+}
+
 .details .size .unit {
     font-size: .85em;
 }
 
 .details .date .month {
+    font-size: 1em;
     line-height:1.3em;
 }
 
@@ -517,8 +520,7 @@ body > footer > .contact {
 .details .meta .people,
 .details .meta .link,
 .details .meta .tags {
-   width:90%;
-   margin:10px 5%;
+  
 }
 .details .meta .people ul {
     margin:0 0 0 0;
