editing detail page

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -452,6 +452,7 @@ body > footer > .contact {
 
 .details .size .unit {
     font-size: .85em;
+    line-height:1.3em;
 }
 
 .details .date .month {
