--- a/futuregreen/templates/portfolio/map.html
+++ b/futuregreen/templates/portfolio/map.html
@@ -5,6 +5,6 @@
          {% if map.latitude and not map.geocode_error %}
             style="width:100%; height: 100%;"
          {% endif %}
-         class="easy-map-googlemap">
+         class="easy-map-googlemap square">
     </div>
 {% endblock %}
