--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -110,7 +110,7 @@
                         </p>
                     </li>
                     </ul>
-                    <div class="location box">
+                    <div class="location box square">
                         {% load easy_maps_tags %}
                         {% easy_map project.address using 'portfolio/map.html' %}
                     </div>
