editing detail page

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -154,7 +154,7 @@ body > footer > .contact {
      -o-box-sizing: border-box;
      -ms-box-sizing: border-box;
      box-sizing: border-box;
-     padding: .714285714em;
+     padding: 10px;
 }
 
 /********** HOMEPAGE ***********/
