--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -293,6 +293,12 @@ body > footer > .contact {
     background:url('images/top-bg.png') no-repeat right 10px;
 }
 
+.slideshow .controls ul {
+    margin:0 0 0 0;
+    padding:0 0 0 0;
+    overflow: auto;
+}
+
 .slideshow .controls li {
     list-style: none;
     float:left;
