--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -316,6 +316,7 @@ body > footer > .contact {
     opacity:0.3;
     filter:alpha(opacity=30); /* For IE8 and earlier */
     -webkit-transition: all 0.5s ease-in;
+    display:block;
 }
 
 .slideshow .controls a.active img,
