--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -489,7 +489,7 @@ body > footer > .contact {
 .details .meta .categories {
     overflow: hidden;
     clear:both;
-    margin: 10px 0;
+    margin: 10px;
 }
 
 .details .meta .categories li {
