--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -542,6 +542,8 @@ body > footer > .contact {
     bottom:0;
     right:0;
     width:16.66667%;
+    background:url('images/vertical-bg.png') no-repeat 10px top,
+               url('images/bottom-bg.png') no-repeat left 10px;
 }
 
  .details .meta .info-boxes ul {
