editing detail page

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -164,7 +164,7 @@ body > footer > .contact {
 }
 
 #home .content > div > article.text > div {
-    padding: 10px;
+    /*padding: 10px;*/
     color:#fff;
 }
 
